IsDownloadSpam() detects files downloaded through "Save link as..." context menu item as spam
Categories
(Firefox :: Downloads Panel, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox96 | --- | fixed |
People
(Reporter: mtigley, Assigned: enndeakin)
References
Details
Attachments
(1 file)
STR
- Enable
browser.download.enable_spam_prevention
- Go to https://developer.mozilla.org/en-US/docs/MDN/Contribute/Getting_started
- Open a the filepicker for "About MDN" link by choosing the "Save link as" item from the context menu. Dismiss the filepicker.
- Repeat step 3.
Expected
The file picker should open.
Actual
The file picker doesn't open.
Notes
The issue seems goes away when the pref is disabled. This is likely caused by the IsDownloadSpam method falsely detecting the file as "spam".
Reporter | ||
Updated•4 years ago
|
Comment 1•4 years ago
|
||
The severity field is not set for this bug.
:mak, could you have a look please?
For more information, please visit auto_nag documentation.
Assignee | ||
Comment 2•4 years ago
|
||
I have come across this issue. It can be fixed by just skipping the download spam check if mForceSave is true. Can I just make a fix that does this or is there more to do here?
Reporter | ||
Comment 3•4 years ago
|
||
(In reply to Neil Deakin from comment #2)
I have come across this issue. It can be fixed by just skipping the download spam check if mForceSave is true. Can I just make a fix that does this or is there more to do here?
Nice find! And yes, feel free to fix it here (or another bug if you prefer).
Reporter | ||
Updated•4 years ago
|
Updated•4 years ago
|
Assignee | ||
Comment 4•4 years ago
|
||
Comment 6•4 years ago
|
||
bugherder |
Updated•4 years ago
|
Description
•