Bug 1737696, skip spam check for downloads that were saved; this allows the save link context menu item to work properly, r=mtigley

Differential Revision: https://phabricator.services.mozilla.com/D130999