uriloader/exthandler/nsExternalHelperAppService.cpp
@@ -1738,7 +1738,7 @@ NS_IMETHODIMP nsExternalAppHandler::OnStartRequest(nsIRequest* request) {
     aChannel->GetURI(getter_AddRefs(mSourceUrl));
   }
 
-  if (StaticPrefs::browser_download_enable_spam_prevention() &&
+  if (!mForceSave && StaticPrefs::browser_download_enable_spam_prevention() &&
       IsDownloadSpam(aChannel)) {
     RecordDownloadTelemetry(aChannel, "spam");
     return NS_OK;
